src/objects/Territory_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Next_Mass_Update_Date__c</fullName>
        <label>Next Mass Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account/Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Territory Mass Update</label>
    <nameField>
        <displayFormat>Update-{00000}</displayFormat>
        <label>Territory Nbr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Mass Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>